# Viuwa

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICES.txt  README.md  err.txt  example-config.toml  rustfmt.toml
src/: commands.rs  config.rs  cursor.rs  errors.rs  lib.rs  macros.rs  main.rs  viuwa.rs
src/viuwa/: ansi.rs  resizer.rs  vimage.rs  viuwa_image.rs
src/viuwa/ansi/: 256rgb.rs.txt  color.rs  fmt_u8.rs.txt  gray256.rs.txt  macros.rs
src/viuwa/resizer/: filtertype.rs  sampler.rs
viuwa-ansi/: Cargo.toml  README.md
viuwa-ansi/src/: color.rs  consts.rs  image.rs  lib.rs  macros.rs  pixel.rs  statics.rs  traits.rs
viuwa-image/: Cargo.toml  README.md
viuwa-image/src/: filter.rs  image.rs  lib.rs  macros.rs  pixel.rs  sample.rs
viuwa-lib/: Cargo.toml
viuwa-lib/src/: image.rs  lib.rs
viuwa-lib/src/ansi/: color.rs  consts.rs  fmt_u8.ron  macros.rs  mod.rs  traits.rs
viuwa-lib/src/resizer/: filter.rs  mod.rs  sample.rs
