[package]
name = "viuwa"
version = "0.0.51"
edition = "2021"
authors = ["Lance Warden"]
description = "Yet another \"super simple\" cli/tui ANSI image viewer, minimally compatibile with wasm32-wasi."
license = "MIT OR Apache-2.0"
repository = "https://github.com/WanderLanz/Viuwa"
keywords = ["image-viewer", "ansi", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.*", features = ["derive", "env"] }
# Because we don't want rayon to muck about the runtime if we don't have the feature enabled
image = { version = "0.24.4", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
    "openexr",
] }
rayon = { version = "1.5.*", optional = true }
ndarray = { version = "0.15.6", default-features = false, features = ["std"] }
# base64 = { version = "0.13.*", optional = true }

[target.'cfg(any(unix,windows))'.dependencies]
crossterm = { version = "0.25.*", default-features = false }

[features]
default = ["rayon"]
rayon = ["dep:rayon", "ndarray/rayon", "image/jpeg_rayon"]
# sixel = []
# iterm = ["dep:base64"]

# [profile.release]
# lto = true
# strip = true
# codegen-units = 1
