[package]
name = "viuwa"
version = "0.1.0"
edition = "2021"
authors = ["Lance Warden"]
description = "Yet another \"super simple\" cli/tui ANSI image viewer, minimally compatibile with wasm32-wasi."
license = "MIT OR Apache-2.0"
repository = "https://github.com/WanderLanz/Viuwa"
keywords = ["image-viewer", "ansi", "cli", "tui"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = { version = "4.0.*", features = ["derive"] }
image = { version = "0.24.5", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
    "openexr",
] }
rayon = { version = "1.6.0", optional = true }
fast_image_resize = { version = "2.3.*", optional = true }
toml = { version = "0.5.9", optional = true }
directories = { version = "4.0.*", optional = true }
ndarray = { version = "0.15.6", default-features = false, features = ["std"] }
human-panic = "1.0.*"
anyhow = "1.0.*"
# base64 = { version = "0.13.*", optional = true }

[target.'cfg(any(unix,windows))'.dependencies]
crossterm = { version = "0.25.*", default-features = false }

[features]
default = ["env", "config"]
# multithreading with rayon
rayon = ["dep:rayon", "ndarray/rayon", "image/jpeg_rayon"]
# fast image resizing with fast_image_resize and simd, takes precedence over rayon image resizing
fir = ["dep:fast_image_resize"]
# read options from environment variables
env = ["clap/env"]
# read options from a config file
config = ["dep:toml", "dep:directories"]
# print timings for various operations
profiler = []
# print debug info
debug = []
# sixel = []
# iterm = ["dep:base64"]

# [profile.release]
# lto = true
# strip = true
# codegen-units = 1
