[package]
name = "viuwa"
version = "0.1.0"
edition = "2021"
authors = ["Lance Warden"]
description = "Yet another \"super simple\" cli/tui ANSI image viewer, minimally compatibile with wasm32-wasi."
license = "MIT OR Apache-2.0"
repository = "https://github.com/WanderLanz/Viuwa"
keywords = ["image-viewer", "ansi", "cli", "tui"]
categories = ["command-line-utilities"]


[badges]
maintenance = { status = "experimental" }

[workspace]

[dependencies]
viuwa-image = { path = "viuwa-image", default-features = false, features = [
    "serde",
    "image",
] }
viuwa-ansi = { path = "viuwa-ansi", default-features = false, features = [
    "serde",
    "image",
] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.24", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
    "openexr",
] }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.7" }
human-panic = "1"
anyhow = "1"
# base64 = { version = "0.13.*", optional = true }
is-terminal = "*"

[target.'cfg(target_os = "wasi")'.dependencies]
rustix = "*"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
crossterm = { version = "0.26", default-features = false }

[features]
default = ["rayon", "fir"]
# multithreading with rayon
rayon = [
    "dep:rayon",
    "image/jpeg_rayon",
    "viuwa-image/rayon",
    "viuwa-ansi/rayon",
]
# fast image resizing with fast_image_resize and simd, takes precedence over rayon image resizing
fir = ["viuwa-image/fir"]
# read options from environment variables
env = ["clap/env"]
# print trace and timings for various operations
trace = []
# print debug messages
debug = []
# sixel = []
# iterm = ["dep:base64"]

# [profile.release]
# lto = true
# strip = true
# codegen-units = 1
