[package]
name = "viuwa-ansi"
version = "0.1.0"
edition = "2021"
authors = ["Lance Warden"]
description = "ANSI library for viuwa"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WanderLanz/Viuwa/tree/main/viuwa-ansi"
keywords = ["ansi"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
viuwa-image = { path = "../viuwa-image" }
num-traits = "0.2.*"
serde = { version = "1.*", optional = true, default-features = false }
image = { version = "0.24.*", default-features = false, optional = true }
rayon = { version = "1.*", optional = true }
# base64 = { version = "*", optional = true }
[target.'cfg(not(target_family = "wasm"))'.dependencies]
crossterm = { version = "0.26.0", default-features = false }

[features]
default = ["rayon", "parse", "image", "wasi-request-size"]
parse = []
# Serde support
serde = ["dep:serde", "parse"]
# Add image support
image = ["dep:image", "viuwa-image/image"]
# Multithreading with rayon
rayon = ["dep:rayon", "viuwa-image/rayon"]
# Add an ANSI request fallback to Terminal::size()
wasi-request-size = []
# sixel = []
# iterm = ["dep:base64"]
