[package]
name = "viuwa-image"
version = "0.1.0"
edition = "2021"
authors = ["Lance Warden"]
description = "basic CPU-bound image operations for viuwa"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WanderLanz/Viuwa/tree/main/viuwa-image"

[badges]
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2.*"
bytemuck = { version = "1.*", features = [
    "extern_crate_alloc",
    "min_const_generics",
] }
serde = { version = "1.*", optional = true, default-features = false }
image = { version = "0.24.*", default-features = false, optional = true }
rayon = { version = "1.*", optional = true }
fast_image_resize = { version = "2.*", optional = true }

[features]
default = ["parse", "rayon", "fir"]
parse = []
# Serde support
serde = ["dep:serde", "parse"]
# API with `image` crate
image = ["dep:image"]
# multithreading API with `rayon` crate, automatically used for resizing
rayon = ["dep:rayon", "image/jpeg_rayon"]
# fast image resizing with `fast_image_resize` crate and simd
fir = ["dep:fast_image_resize"]
# use f64 instead of f32 for calculations
f64 = []
